# particles-metal

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: Camera.h  Emitter.h  Particle.h  Renderer.h  Renderer.mm  main.mm
src/ios/: AppDelegate.swift  ContentView.swift  Coordinator.swift  MetalView-macOS.swift  MetalWindow-macOS.swift  RendererWrapper.h  RendererWrapper.mm
src/metal/: shaders.metal
src/ui/: AppDelegate.swift  Main.swift  MetalView-iOS.swift  MetalView-macOS.swift  MetalWindow-iOS.swift  MetalWindow-macOS.swift  RendererWrapper.mm  imgui.h
